# asgmd05-Keysha-Aliqa-Rahma-Hidayat

./: README.md  __init__.py  helper.py  main.py  pipeline.pkl  pyproject.toml  repo.txt  requirements.txt  streamlit run.ps1
