[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asgmd05"
version = "0.1.0"
description = "ML pipeline deployment with Streamlit"
authors = [
  {name = "Your Name"}
]

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "streamlit",
    "joblib"
]